@@ -1,3 +1,6 @@
+2009-04-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/prepared_statement.hxx, test/unit/test_prepared_statement.cxx:
+  - Documented & tested binary parameters, thanks Michael Akinde.
 2009-04-15  Eugene V. Lyubimkin <jackyf.devel@gmail.com>
  NEWS:
   - Typo fix.
